# API-Gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: test_user_service.yml
User-service/: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml
User-service/config/: config.py  envs.py
User-service/core/: consul_integration.py  db.py  logging_setup.py  models.py  utils.py
User-service/core/database/: db.py  models.py  token_table.py
User-service/dtos/: user.py
User-service/routers/: consul.py  user.py
User-service/tests/test_routers/: test_consul.py
bootstrap/: __init__.py  bootstrap.py
core/: __init__.py
core/api/: api.py
core/api/modules/: make_request.py
core/api/routers/: FileUpload.py  HelloWorld.py
core/api/routers/mosgimService/: generate_map.py
core/calery/: tasks.py
core/config/: calery_config.py  calery_utils.py  envs.py
core/consul/: consul_init.py
core/logging/: loguru_init.py
core/rest_api/: api.py
core/rest_api/auth/: auth_bearer.py
core/rest_api/modules/: make_request.py  route_service.py
core/rest_api/routers/: FileUpload.py  upload_file_test.py
core/rest_api/routers/mosgim_service/: generate_map.py  ping_pong.py
requirements/: common.txt  dev.txt
user_service/: Dockerfile.tests  app.py  docker-compose-for-admin.yml  docker-compose-test.yml  pyproject.toml  scheme.sql
user_service/src/config/: admin_panel.py  config.py  envs.py
user_service/src/core/database/: db.py  models.py  token_table.py
user_service/src/core/database/models/: RoleModel.py  ServiceModel.py  TokenModel.py  UserModel.py  UserServiceModel.py  __init__.py
user_service/src/core/repository/: role_repository.py  service_repository.py  user_repository.py
user_service/src/core/utils/: consul_integration.py  logging_setup.py  utils.py
user_service/src/dtos/: role.py  user.py
user_service/src/routers/: consul.py  role.py  service.py  user.py
user_service/tests/: conftest.py  test_role_repository.py  test_service_repository.py  test_user_repository.py
user_service/tests/test_database/: test_database.py
user_service/tests/test_routers/: test_consul.py  test_role.py  test_service.py  test_user.py
