[tool.poetry]
name = "api-gateway"
version = "0.3.1"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
readme = "README.md"
packages = [{include = "api_gateway"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
loguru = "^0.7.0"
uvicorn-loguru-integration = "^0.3.0"
environs = "^9.5.0"
python-multipart = "^0.0.5"
fastapi-gateway-auto-generate = "^0.3.1"
python-logstash = "^0.4.8"
aiohttp = "^3.8.3"
logstash = "^0.1.dev0"
python-consul = "^1.1.0"
makefun = "^1.15.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
