[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <kuzneczov-f@susanoo.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"
loguru = "^0.7.0"
logstash = "^0.1.dev0"
environs = "^9.5.0"
psycopg2 = "^2.9.7"
python-consul = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
