[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <kuzneczov-f@susanoo.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
logstash = "^0.1.dev0"
environs = "^9.5.0"
psycopg2 = "^2.9.7"
python-consul = "^1.1.0"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-postgresql = "^5.0.0"
fastapi-admin = { git = 'https://github.com/fastapi-admin/fastapi-admin.git' }
sqladmin = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
